# SponsorStream-MCP

./: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
data/: test_ads.json
docs/: CNAME  index.html  styles.css
src/ad_injector/: cli.py  main.py  main_control.py  main_runtime.py  wiring.py
src/ad_injector/adapters/: __init__.py  qdrant_vector_store.py
src/ad_injector/config/: __init__.py  runtime.py
src/ad_injector/domain/: __init__.py  match_semantics.py  policy_engine.py  targeting_engine.py
src/ad_injector/mcp/: auth.py
src/ad_injector/models/: __init__.py  ad.py
src/ad_injector/ops/: __init__.py  migrations.py
src/ad_injector/ports/: __init__.py
src/sponsorstream/: __init__.py  mcp_server.py  wiring.py
src/sponsorstream/adapters/: fastembed_provider.py  qdrant_vector_store.py
src/sponsorstream/config/: runtime.py
src/sponsorstream/core/domain/: sponsorship.py
src/sponsorstream/core/engine/: filters.py  matching.py  policy.py  (+2 more)
src/sponsorstream/domain/: __init__.py  filters.py  match_semantics.py  policy_engine.py  sponsorship.py  targeting_engine.py
src/sponsorstream/interface/: cli.py  mcp_engine.py  mcp_studio.py  requests.py  responses.py  validation.py
src/sponsorstream/models/: __init__.py  mcp_requests.py  mcp_responses.py
src/sponsorstream/ops/: migrations.py
src/sponsorstream/ports/: id_gen.py  vector_store.py
src/sponsorstream/services/: index_service.py  match_service.py
src/sponsorstream_mcp/: __init__.py  main.py  main_control.py  mcp_server.py
src/sponsorstream_mcp/adapters/: fastembed_provider.py
src/sponsorstream_mcp/domain/: filters.py
src/sponsorstream_mcp/mcp/: __init__.py  observability.py  server.py  tools.py
src/sponsorstream_mcp/models/: mcp_requests.py  mcp_responses.py
src/sponsorstream_mcp/ops/: smoke_check.py
src/sponsorstream_mcp/ports/: embedding.py  id_gen.py  vector_store.py
src/sponsorstream_mcp/services/: __init__.py  index_service.py  match_service.py
tests/: test_data_plane_tools.py  test_match_semantics.py  test_match_service.py  test_pacing_engine.py  test_phase_enhancements.py  test_policy_engine.py  test_targeting_engine.py
(+14 files in other folders)
