[project]
name = "sponsorstream-mcp"
version = "0.1.0"
description = "Ad injector application"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "mcp>=1.0.0",
    "fastembed>=0.2.0",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
ad-injector = "sponsorstream_mcp.main:main"
ad-index = "sponsorstream_mcp.cli:main"
ad-mcp-control = "sponsorstream_mcp.main_control:main"
ad-mcp-data = "sponsorstream_mcp.main_runtime:main"
ad-data-plane = "sponsorstream_mcp.main_runtime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
