[project]
name = "sponsorstream"
version = "0.1.0"
description = "SponsorStream: AI-Powered Contextual Sponsorships for Agents"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "mcp>=1.0.0",
    "fastembed>=0.2.0",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
sponsorstream-engine = "sponsorstream.interface.mcp_engine:main"
sponsorstream-studio = "sponsorstream.interface.mcp_studio:main"
sponsorstream-cli = "sponsorstream.interface.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
